; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_preview.c_ghb_par_scale.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_preview.c_ghb_par_scale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ghb_par_scale(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @ghb_screen_par(i32* %15, i32* %11, i32* %12)
  %17 = load i32, i32* %11, align 4
  %18 = icmp slt i32 %17, 1
  br i1 %18, label %22, label %19

19:                                               ; preds = %5
  %20 = load i32, i32* %12, align 4
  %21 = icmp slt i32 %20, 1
  br i1 %21, label %22, label %23

22:                                               ; preds = %19, %5
  store i32 1, i32* %11, align 4
  store i32 1, i32* %12, align 4
  br label %23

23:                                               ; preds = %22, %19
  %24 = load i32, i32* %9, align 4
  %25 = load i32, i32* %12, align 4
  %26 = mul nsw i32 %24, %25
  store i32 %26, i32* %13, align 4
  %27 = load i32, i32* %10, align 4
  %28 = load i32, i32* %11, align 4
  %29 = mul nsw i32 %27, %28
  store i32 %29, i32* %14, align 4
  %30 = load i32, i32* %9, align 4
  %31 = load i32, i32* %10, align 4
  %32 = icmp sgt i32 %30, %31
  br i1 %32, label %33, label %41

33:                                               ; preds = %23
  %34 = load i32*, i32** %7, align 8
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* %13, align 4
  %37 = mul nsw i32 %35, %36
  %38 = load i32, i32* %14, align 4
  %39 = sdiv i32 %37, %38
  %40 = load i32*, i32** %7, align 8
  store i32 %39, i32* %40, align 4
  br label %49

41:                                               ; preds = %23
  %42 = load i32*, i32** %8, align 8
  %43 = load i32, i32* %42, align 4
  %44 = load i32, i32* %14, align 4
  %45 = mul nsw i32 %43, %44
  %46 = load i32, i32* %13, align 4
  %47 = sdiv i32 %45, %46
  %48 = load i32*, i32** %8, align 8
  store i32 %47, i32* %48, align 4
  br label %49

49:                                               ; preds = %41, %33
  ret void
}

declare dso_local i32 @ghb_screen_par(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
